added language detection and line count

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,12 @@
     </div>
   </body>
   <footer class="statusbar">
-    <button id="remote" class="sts-btn">&#xE8AF;</button>
+    <button id="remote" class="sts-btn">&#xE93E;</button>
     <button id="git-sync" class="sts-btn">&#xE895;</button>
+    <button id="feedback" class="sts-btn">&#xE90A;</button>
     <button id="language" class="sts-btn">Language</button>
+    <button id="tabs" class="sts-btn">Spaces: 2</button>
+    <button id="counter" class="sts-btn">Ln 0, Col 0</button>
   </footer>
   <script src="/ace-builds/src/ace.js" type="text/javascript" charset="utf-8"></script>
   <script type="module" src="/main.js" defer></script>
