--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <footer class="statusbar">
     <button id="remote" class="sts-btn">&#xE93E;</button>
     <button id="git-sync" class="sts-btn">&#xE895;</button>
-    <button id="feedback" class="sts-btn">&#xE90A;</button>
+    <button id="feedback" class="sts-btn">&#xE8E4;</button>
     <button id="language" class="sts-btn">Language</button>
     <button id="tabs" class="sts-btn">Spaces: 2</button>
     <button id="counter" class="sts-btn">Ln 0, Col 0</button>
