--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="Themes/one_dark.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Neith</title>
@@ -23,7 +22,7 @@
     <div id="table">
       <button class="tab">index.html</button>
       <button class="tab">main.js</button>
-      <button class="tab">one_dark.css</button>
+      <button class="tab">styles.css</button>
     </div>
     <div id="editor">
     </div>
