--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
       <button class="titlebar-button" id="titlebar-minimize">&#xE921;</button>
     </header>
     <div id="table">
+      <button class="tab">Untitled.txt</button>
     </div>
     <div id="editor">
     </div>
