gave functionality to 'new' menu button

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="dropdown">
         <button class="nav-btns" id="file">File</button>
         <div class="drop-menu">
-          <button class="menu-btn">New</button>
+          <button class="menu-btn" id="new">New</button>
           <button class="menu-btn">Open</button>
           <br>
           <button class="menu-btn">Save As</button>
